syntax = "proto3";

package net.jokubasdargis.awesome.transport;
import "google/protobuf/timestamp.proto";

option java_package = "net.jokubasdargis.awesome.transport";
option java_outer_classname = "OuterTransport";
option java_multiple_files = true;

message Link {
    string url = 1;
}

message LinkOccurrence {
    Link link = 1;
    Link context = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LinkDefinitionRelationship {
    Link from = 1;
    Link to = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LinkDefinitionTitle {
    Link link = 1;
    string value = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LinkDefinitionDescription {
    Link link = 1;
    string value = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LinkDefinitionStarsCount {
    Link link = 1;
    int32 value = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LinkDefinitionForksCount {
    Link link = 1;
    int32 value = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LinkDefinitionLatestCommitDate {
    Link link = 1;
    google.protobuf.Timestamp value = 2;
    google.protobuf.Timestamp timestamp = 3;
}
